--- a/cn.zh-CN/产品简介/规格与定价.md
+++ b/cn.zh-CN/产品简介/规格与定价.md
@@ -13,15 +13,15 @@ POLARDB支持以下两种付费方式：
 
 若您在合同期内退订包年包月的集群，需要交纳相应的手续费，详细规则请参见[退款规则](https://help.aliyun.com/knowledge_detail/37096.html)。
 
-## 付费内容 {#section_xzw_tfj_kgb .section}
+## 收费项 {#section_xzw_tfj_kgb .section}
 
 使用POLARDB集群需要支出的费用如下：
 
 |收费项|说明|
 |---|--|
-|[计算集群（主节点和只读节点）](#)|支持**包年包月**和**按小时付费**。|
-|[存储空间](#)|支持**按小时付费**。|
-|[SQL洞察](#)|开启后收费，支持**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/用户指南/日志与审计/SQL洞察.md#)。|
+|[计算集群（主节点和只读节点）](#)|**包年包月**或**按小时付费**。|
+|[存储空间](#)|**按小时付费**。|
+|[SQL洞察](#)|开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 售价 {#section_f4v_rpg_tdb .section}
@@ -36,7 +36,7 @@ POLARDB支持以下两种付费方式：
 
  4GB
 
- |5T|1,200|1Gbps|8000|1Gbps| 280元/月
+ |5TB|1,200|1Gbps|8000|1Gbps| 280元/月
 
  0.59元/小时
 
@@ -49,7 +49,7 @@ POLARDB支持以下两种付费方式：
 
  16GB
 
- |10T|5,000|10Gbps|32,000|4Gbps| 1000元/月
+ |10TB|5,000|10Gbps|32,000|4Gbps| 1000元/月
 
  2.09元/小时
 
@@ -62,7 +62,7 @@ POLARDB支持以下两种付费方式：
 
  32GB
 
- |10T|10,000|10Gbps|64,000|8Gbps| 2000元/月
+ |10TB|10,000|10Gbps|64,000|8Gbps| 2000元/月
 
  4.17元/小时
 
@@ -75,7 +75,7 @@ POLARDB支持以下两种付费方式：
 
  64GB
 
- |10T|10,000|10Gbps|72,000|10Gbps| 3200元/月
+ |30TB|10,000|10Gbps|72,000|10Gbps| 3200元/月
 
  6.67元/小时
 
@@ -88,7 +88,7 @@ POLARDB支持以下两种付费方式：
 
  128GB
 
- |20T|20,000|10Gbps|128,000|16Gbps| 6400元/月
+ |30TB|20,000|10Gbps|128,000|16Gbps| 6400元/月
 
  13.34元/小时
 
@@ -101,7 +101,7 @@ POLARDB支持以下两种付费方式：
 
  256GB
 
- |20T|64,000|10Gbps|192,000|24Gbps| 12800元/月
+ |30TB|64,000|10Gbps|192,000|24Gbps| 12800元/月
 
  26.67元/小时
 
@@ -114,7 +114,7 @@ POLARDB支持以下两种付费方式：
 
  710GB
 
- |50T|64,000|25Gbps|256,000|32Gbps| 35200元/月
+ |50TB|64,000|25Gbps|256,000|32Gbps| 35200元/月
 
  73.34元/小时
 
@@ -133,7 +133,7 @@ POLARDB支持以下两种付费方式：
     -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
 -   **存储空间价格**
 
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/用户指南/集群管理/查看集群.md#)查看已使用的数据量。
+    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
     -   中国大陆地域：每GB 0.00486元，按小时扣费。
     -   中国香港地域： 每GB 0.00542元，按小时扣费。
@@ -143,10 +143,8 @@ POLARDB支持以下两种付费方式：
     -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品简介/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/用户指南/集群管理/变更配置.md)。
 -   **SQL洞察价格**
 
-    SQL洞察按照审计日志存储的容量收取费用。
+    SQL洞察按照审计日志存储的容量收取费用，每GB 0.008元，按小时扣费。
 
-    -   中国大陆：每GB 0.008 元，按小时扣费。
-    -   中国香港：每GB 0.0122 元，按小时扣费。
     **说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
 
 -   **数据备份价格**
