--- a/cn.zh-CN/用户指南/集群管理/手动续费集群.md
+++ b/cn.zh-CN/用户指南/集群管理/手动续费集群.md
@@ -8,6 +8,7 @@
 2.  在左上角选择地域，即可显示您账号在该地域的所有集群。
 3.  找到目标集群，在**操作**列中选择**...** \> **续费**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15453000702102_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15573019952102_zh-CN.png)
 
+4.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
 
