--- a/cn.zh-CN/产品简介/产品优势.md
+++ b/cn.zh-CN/产品简介/产品优势.md
@@ -2,11 +2,11 @@
 
 ## 简单易用 {#section_ipv_tvf_tdb .section}
 
-100%兼容MySQL。您已有的使用MySQL数据库的应用程序代码、驱动无需更改，即可运行于POLARDB。
+兼容MySQL、PostgreSQL、Oracle引擎。您已有的应用程序代码、驱动无需更改，即可运行于POLARDB。
 
 ## 极致性能，降低成本 {#section_ryk_4qv_tdb .section}
 
--   针对数据库内核进行深度优化，同时采用物理复制、RDMA高速网络和分布式共享存储，读性能最高能达到MySQL的6倍。
+-   针对数据库内核进行深度优化，同时采用物理复制、RDMA高速网络和分布式共享存储，大幅提高性能。
 -   集群包含一个主节点和最多15个只读节点，满足高并发场景对性能的要求，尤其适用于读多写少的场景。
 
 ## 超大容量，支持上百TB级别数据 {#section_kpv_tvf_tdb .section}
@@ -15,7 +15,7 @@
 
 ## 快速弹性，应对不确定的业务增长 {#section_opv_tvf_tdb .section}
 
--   Serverless 存储
+-   Serverless存储
 
     存储空间无需手动配置，根据数据量自动伸缩，您只需为实际使用的数据库容量付费。
 
@@ -40,7 +40,7 @@
 
 -   无锁备份
 
-    利用底层分布式存储的快照技术，只需分钟级别即可完成对上T的数据库的备份，且整个备份过程不需要对MySQL加锁，效率更高，影响更小。
+    利用底层分布式存储的快照技术，只需分钟级别即可完成对上T的数据库的备份，且整个备份过程不需要加锁，效率更高，影响更小。
 
 -   并行查询引擎（公测）
 
@@ -49,7 +49,7 @@
 
 ## 高可用和高可靠保障 {#section_lpv_tvf_tdb .section}
 
--   共享分布式存储的设计，彻底解决了MySQL Master-Slave异步复制所带来的备库数据非强一致的缺陷，使得整个数据库集群在应对任何单点故障时，可以保证数据 0 丢失。
+-   共享分布式存储的设计，彻底解决了Master-Slave异步复制所带来的备库数据非强一致的缺陷，使得整个数据库集群在应对任何单点故障时，可以保证数据0丢失。
 -   采用Active-Active的高可用集群架构，可读写的主节点和只读节点之间进行Failover切换，与传统的Active-Standby相比，用同样成本带来了更好的系统访问性能。
 
 ## 数据安全可靠 {#section_mpv_tvf_tdb .section}
