--- a/cn.zh-CN/产品简介/产品架构.md
+++ b/cn.zh-CN/产品简介/产品架构.md
@@ -2,19 +2,19 @@
 
 云数据库POLARDB基于Cloud Native设计理念，其架构示意图及特点如下：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3008/15367690712077_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3008/15573675442077_zh-CN.png)
 
 ## 一写多读 {#section_o1w_krf_tdb .section}
 
-POLARDB采用分布式集群架构，一个集群包含一个主实例和最多15个只读实例（至少一个，用于保障高可用）。主实例处理读写请求，只读实例仅处理读请求。主实例和只读实例之间采用Active-Active的Failover方式，提供数据库的高可用服务。
+POLARDB采用分布式集群架构，一个集群包含一个主节点和最多15个只读节点（至少一个，用于保障高可用）。主节点处理读写请求，只读节点仅处理读请求。主节点和只读节点之间采用Active-Active的Failover方式，提供数据库的高可用服务。
 
 ## 计算与存储分离 {#section_r1f_mrf_tdb .section}
 
-POLARDB采用计算与存储分离的设计理念，满足公共云计算环境下用户业务弹性扩展的刚性需求。数据库的计算节点（DB Server）仅存储元数据，而将数据文件、Redo Log等存储于远端的存储节点（Chunk Server）。各计算节点之间仅需同步Redo Log相关的元数据信息，极大降低了主实例和只读实例间的延迟，而且在主实例故障时，只读实例可以快速切换为主实例。
+POLARDB采用计算与存储分离的设计理念，满足公共云计算环境下用户业务弹性扩展的刚性需求。数据库的计算节点（DB Server）仅存储元数据，而将数据文件、Redo Log等存储于远端的存储节点（Chunk Server）。各计算节点之间仅需同步Redo Log相关的元数据信息，极大降低了主节点和只读节点间的延迟，而且在主节点故障时，只读节点可以快速切换为主节点。
 
 ## 读写分离 {#section_ycv_lcv_j2b .section}
 
-读写分离是POLARDB集群默认免费提供的一个透明、高可用、自适应的负载均衡能力。通过读写分离地址，SQL请求自动转发到POLARDB集群的各个实例，提供聚合、高吞吐的并发SQL处理能力。具体请参见[读写分离](../../../../cn.zh-CN/用户指南/读写分离.md)。
+读写分离是POLARDB for MySQL集群默认免费提供的一个透明、高可用、自适应的负载均衡能力。通过集群地址，SQL请求自动转发到POLARDB集群的各个节点，提供聚合、高吞吐的并发SQL处理能力。具体请参见[读写分离](../../../../cn.zh-CN/用户指南/读写分离.md)。
 
 ## 高速链路互联 {#section_s1f_mrf_tdb .section}
 
