--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -1,6 +1,6 @@
 # 使用限制 {#concept_tb5_rvk_xdb .concept}
 
-## 规格限制 {#section_dxq_xxk_xdb .section}
+## POLARDB for MySQL规格限制 {#section_dxq_xxk_xdb .section}
 
 |节点规格|文件系统占用内存|文件个数上限|
 |:---|:-------|:-----|
@@ -16,14 +16,50 @@
 
 -   **文件个数上限**：包括用户文件、数据库系统库文件（约100个）、日志文件（使用SHOW POLAR LOGS可查看日志文件数量）等。一个普通的POLARDB表占用两个文件，一个分区表占用N+2个文件（N为分区数）。文件数量达到上限后，继续创建表会提示如下错误：
 
-    ERROR 3017 \(HY000\): Too many files. PolarDB only supports 2048 files every 10GB disk size. Please drop some tables/databases before creating new tables
+    ``` {#codeblock_teo_792_g1i}
+    ERROR 3017 (HY000): Too many files. PolarDB only supports 2048 files every 10GB disk size. Please drop some tables/databases before creating new tables
+    ```
 
     此时需要删除部分表或者升级集群规格。
 
 -   **文件系统占用内存**：当集群达到存储空间上限，且处于正常读写的情况（非性能压测，没有大表DDL）时，文件系统所占用的内存。如果集群没有达到存储空间上限，文件系统占用的内存小于此参数。
 
-## 其他限制 {#section_a3h_syk_xdb .section}
+## POLARDB for MySQL其他限制 {#section_a3h_syk_xdb .section}
 
--   **表名长度**：任意规格的集群中的文件名（即表名）都不能超过63个字符，大约为11个汉字。
+-   表名长度：任意规格的集群中的文件名（即表名）都不能超过63个字符，大约为11个汉字。
 -   不支持在集群上设置Serializable隔离级别。
+
+## POLARDB for PostgreSQL/Oracle规格限制 {#section_dxq_xxk_xdb .section}
+
+|节点规格|文件个数上限|
+|:---|:-----|
+|polar.pg.x4.medium|1048576|
+|polar.pg.x4.large|2097152|
+|polar.pg.x4.xlarge|2097152|
+|polar.pg.x8.xlarge|4194304|
+|polar.pg.x8.2xlarge|8388608|
+|polar.pg.x8.4xlarge|12582912|
+|polar.pg.x8.12xlarge|20971520|
+|polar.o.x4.medium|1048576|
+|polar.o.x4.large|2097152|
+|polar.o.x4.xlarge|2097152|
+|polar.o.x8.xlarge|4194304|
+|polar.o.x8.2xlarge|8388608|
+|polar.o.x8.4xlarge|12582912|
+|polar.o.x8.12xlarge|20971520|
+
+ **文件个数上限**：包括用户表文件、数据库系统表文件\(大约1000个\)、日志文件等。一个普通的POLARDB表\(非分区表\)占用3个文件\(数据文件、visibilitymap文件、fsm文件，使用索引的话，每个索引一个文件\)。文件数量达到上限后，继续创建表会提示类似以下错误：
+
+``` {#codeblock_w84_wy1_jki}
+could not create file
+```
+
+此时需要删除部分表或者升级集群规格。
+
+## POLARDB for PostgreSQL/Oracle其他限制 {#section_l64_ufj_wm0 .section}
+
+|操作|使用约束|
+|--|----|
+|数据库的root权限|不提供superuser权限，但提供polar\_superuser权限，为superuser权限的子集。|
+|dblink/fdw|不支持。|
 
