--- a/cn.zh-CN/快速入门/设置集群白名单.md
+++ b/cn.zh-CN/快速入门/设置集群白名单.md
@@ -4,6 +4,8 @@
 
 只有已添加到白名单中的IP地址才可以访问集群，白名单适用于集群中的所有节点。
 
+**说明：** POLARDB for PostgreSQL/Oracle暂不支持设置集群白名单，只有相同VPC内的实例才可以访问集群。
+
 ## 注意事项 {#section_lfs_b11_lfb .section}
 
 -   默认情况下，白名单只包含IP地址127.0.0.1，表示任何IP地址均无法访问该数据库集群。
@@ -16,7 +18,7 @@
 2.  找到目标集群，单击**集群名称**列的集群ID，进入基本信息页面。
 3.  在**访问信息**区域，单击**白名单列表**右侧的**配置**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3015/154523983613598_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3015/155736771213598_zh-CN.png)
 
 4.  在**配置白名单**对话框中，添加服务器IP地址以允许这些服务器访问数据库集群。
 5.  单击**提交**。
