--- a/cn.zh-CN/用户指南/集群管理/增加或删除节点.md
+++ b/cn.zh-CN/用户指南/集群管理/增加或删除节点.md
@@ -12,13 +12,13 @@
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  选择地域。
-3.  找到目标集群，在操作列中单击**增节点**，或者在基本信息页面下方单击**增加节点**。
+3.  找到目标集群，在**操作**列中单击**增节点**，或者在基本信息页面下方单击**增加节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/154530010234661_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155736789534661_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/154530010213618_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155736789513618_zh-CN.png)
 
-4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15453001023597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按量付费服务协议》**，单击**去开通**。
+4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15573678953597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
 
 ## 删除只读节点 {#section_fkk_13d_lfb .section}
 
@@ -28,13 +28,13 @@
 2.  选择地域。
 3.  找到目标集群，在操作列中选择**…** \> **减节点**，或者在基本信息页面下方单击**减少节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/154530010234666_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155736789534666_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/154530010213619_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155736789513619_zh-CN.png)
 
-4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15453001023601_zh-CN.png)，并在弹出对话框中单击**确定**。
+4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15573678953601_zh-CN.png)，并在弹出对话框中单击**确定**。
 
     **说明：** 集群中必须保留至少一个只读节点，以保障集群的高可用。
 
-5.  勾选**《云数据库 POLARDB-按量付费服务协议》**，单击**确认**。
+5.  勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**确认**。
 
