--- a/cn.zh-CN/用户指南/备份与恢复/恢复数据.md
+++ b/cn.zh-CN/用户指南/备份与恢复/恢复数据.md
@@ -3,10 +3,13 @@
 恢复POLARDB数据的过程如下：
 
 1.  将历史数据恢复到新集群中。您可以选择以下其中一种恢复方式：
+
     -   [按时间点恢复（恢复到任意时间点）](#)
     -   [按备份集（快照）恢复](#)
+    **说明：** POLARDB for PostgreSQL/Oracle暂不支持按时间点恢复。
+
 2.  [登录到集群](../../../../cn.zh-CN/快速入门/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
-3.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移/从POLARDB迁移至POLARDB.md)。
+3.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md)。
 
 **说明：** 恢复后的集群包含原集群的数据和账号信息，不包含原集群的参数设置。
 
@@ -20,7 +23,7 @@
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**按时间点恢复**，在弹出的对话框中单击**确认** 。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/155556745434703_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/155736791534703_zh-CN.png)
 
 6.  在克隆实例页面中，选择新集群的计费方式：
     -   **预付费**：在创建集群时需要支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。如果您要长期使用该集群，**预付费**方式更加划算，而且购买时长越长，折扣越多。
@@ -30,11 +33,11 @@
     -   **备份时间点**：可以设置为过去7天内的任意时间点。
     -   **地域**：无需修改，与原集群相同。
     -   **可用区**：无需修改。
-    -   **专有网络**：无需修改。
+    -   **网络类型**：无需修改。
     -   **VPC网络**和**VPC交换机**：建议保持不变，即原集群所在的VPC网络和交换机。
     -   **数据库引擎**：无需修改。
-    -   **规格**：不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
-    -   **只读节点**：无需修改。
+    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
+    -   **节点个数**：无需修改。系统将自动创建一个与主节点规格相同的只读节点。
     -   **集群名称**：如果留空，系统将为您自动生成一个集群名称。创建集群后还可以修改集群名称。
     -   **购买时长**：预付费集群需要填写此参数。
     -   **集群数量**：默认为1，无法修改。
@@ -46,7 +49,7 @@
 2.  选择集群所在的地域。
 3.  找到目标集群，单击集群ID。
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
-5.  找到目标备份集（快照），单击**恢复备份**。
+5.  找到目标备份集（快照），单击**恢复备份**，在弹出的对话框中单击**确认**。
 6.  在弹出的页面中，选择新集群的计费方式：
     -   **预付费**：在创建集群时需要支付计算实例（一个主实例和一个只读实例）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。如果您要长期使用该集群，**预付费**方式更加划算，而且购买时长越长，折扣越多。
     -   **按量付费**：无需预先支付费用，计算实例和存储空间（实际数据量）均按小时计费，并从账户中按小时扣除。如果您只需短期使用该集群，可以选择**按量付费**，用完即可释放，节省费用。
@@ -55,11 +58,11 @@
     -   **克隆源备份集**：请确认是否为您要恢复的备份集。
     -   **地域**：无需修改，与原集群相同。
     -   **可用区**：无需修改。
-    -   **专有网络**：无需修改。
+    -   **网络类型**：无需修改。
     -   **VPC网络**和**VPC交换机**：建议保持不变，即原集群所在的VPC网络和交换机。
-    -   **引擎类型**：无需修改。
-    -   **实例规格**：不同规格有不同的最大存储容量和性能，具体请参见[节点规格](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
-    -   **只读节点**：无需修改。
+    -   **数据库引擎**：无需修改。
+    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[节点规格](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
+    -   **节点个数**：无需修改。系统将自动创建一个与主节点规格相同的只读节点。
     -   **集群名称**：如果留空，系统将为您自动生成一个集群名称。创建集群后还可以修改集群名称。
     -   **购买时长**：预付费集群需要填写此参数。
     -   **集群数量**：默认为1，无法修改。
@@ -68,7 +71,7 @@
 ## 下一步 {#section_dyr_y2f_v2b .section}
 
 1.  [登录到集群](../../../../cn.zh-CN/快速入门/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
-2.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移/从POLARDB迁移至POLARDB.md)。
+2.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md)。
 
 ## 常见问题 {#section_rlc_yzk_qgb .section}
 
