--- a/cn.zh-CN/用户指南/克隆集群.md
+++ b/cn.zh-CN/用户指南/克隆集群.md
@@ -13,7 +13,7 @@
 
     |参数|说明|
     |:-|:-|
-    |克隆源类型|这里选择**实例**。|
+    |克隆源类型|这里选择**本集群**。|
     |地域|指集群所在的地理位置。克隆集群的地域和原集群相同，不支持修改。|
     |可用区|     -   可用区是地域中的一个独立物理区域，不同可用区之间没有实质性区别。
     -   您可以选择将POLARDB与ECS创建在同一可用区或不同的可用区。
@@ -21,13 +21,14 @@
     |网络类型|     -   无需选择。
     -   仅支持专有网络VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。
  |
-    |VPC网络VPC交换机
+    |VPC网络 VPC交换机
 
-|从下拉菜单中选择VPC和交换机，或者[创建新的VPC和交换机](https://vpc.console.aliyun.com)。**说明：** 请确保POLARDB与需要连接的ECS创建于同一个VPC，否则它们无法通过内网互通，无法发挥最佳性能。
+ |从下拉菜单中选择VPC和交换机，或者[创建新的VPC和交换机](https://vpc.console.aliyun.com)。 **说明：** 请确保POLARDB与需要连接的ECS创建于同一个VPC，否则它们无法通过内网互通，无法发挥最佳性能。
 
-|
+ |
     |数据库引擎|无需选择。|
-    |节点规格|按需选择。不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../../cn.zh-CN/产品简介/规格与定价.md#)。|
+    |节点规格|按需选择。不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../cn.zh-CN/产品简介/规格与定价.md#)。|
+    |节点个数|无需选择。系统将自动创建一个与主节点规格相同的只读节点。|
     |集群名称|     -   可选。
     -   如果留空，系统将为您自动生成一个集群名称。创建集群后还可以修改集群名称。
  |
