--- a/cn.zh-CN/产品简介/规格与定价.md
+++ b/cn.zh-CN/产品简介/规格与定价.md
@@ -124,6 +124,82 @@ POLARDB支持以下两种付费方式：
 
  |
 
+    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
+    |:---|:------|:-----|:----|----|------|-----|--|
+    |polar.pg.x4.medium| 2核
+
+ 8GB
+
+ |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
+    |polar.pg.x4.large| 4核
+
+ 16GB
+
+ |10TB|800|10Gbps|64,000|4Gbps|
+    |polar.pg.x4.xlarge| 8核
+
+ 32GB
+
+ |10TB|1,600|10Gbps|128,000|8Gbps|
+    |polar.pg.x8.xlarge| 8核
+
+ 64GB
+
+ |30TB|3,200|10Gbps|160,000|10Gbps|
+    |polar.pg.x8.2xlarge| 16核
+
+ 128GB
+
+ |30TB|6,400|10Gbps|256,000|16Gbps|
+    |polar.pg.x8.4xlarge| 32核
+
+ 256GB
+
+ |30TB|12,800|10Gbps|384,000|24Gbps|
+    |polar.pg.x8.12xlarge| 88核
+
+ 710GB
+
+ |100TB|36,000|25Gbps|512,000|32Gbps|
+
+    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
+    |:---|:------|:-----|:----|----|------|-----|--|
+    |polar.o.x4.medium| 2核
+
+ 8GB
+
+ |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
+    |polar.o.x4.large| 4核
+
+ 16GB
+
+ |10TB|800|10Gbps|64,000|4Gbps|
+    |polar.o.x4.xlarge| 8核
+
+ 32GB
+
+ |10TB|1,600|10Gbps|128,000|8Gbps|
+    |polar.o.x8.xlarge| 8核
+
+ 64GB
+
+ |30TB|3,200|10Gbps|160,000|10Gbps|
+    |polar.o.x8.2xlarge| 16核
+
+ 128GB
+
+ |30TB|6,400|10Gbps|256,000|16Gbps|
+    |polar.o.x8.4xlarge| 32核
+
+ 256GB
+
+ |30TB|12,800|10Gbps|384,000|24Gbps|
+    |polar.o.x8.12xlarge| 88核
+
+ 710GB
+
+ |100TB|36,000|25Gbps|512,000|32Gbps|
+
     **说明：** 
 
     -   ****以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。****
