--- a/cn.zh-CN/用户指南/账号管理/账号概述.md
+++ b/cn.zh-CN/用户指南/账号管理/账号概述.md
@@ -23,9 +23,22 @@
 
  |
 |**普通账号**| -   可以通过控制台或者SQL语句创建和管理。
--   一个实例可以创建多个普通账号，具体的数量与实例内核有关 。
+-   一个集群可以创建多个普通账号，具体的数量与数据库内核有关 。
 -   需要手动给普通账号授予特定数据库的权限。
 -   普通账号不能创建和管理其他账号，也不能断开其他账号的连接。
 
  |
+
+## 相关API {#section_f35_p4h_yfb .section}
+
+|API|描述|
+|:--|:-|
+|[CreateAccount](../cn.zh-CN/API参考/账号管理/CreateAccount.md#)|创建账号|
+|[DescribeAccounts](../cn.zh-CN/API参考/账号管理/DescribeAccounts.md#)|查看账号列表|
+|[ModifyAccountDescription](../cn.zh-CN/API参考/账号管理/ModifyAccountDescription.md#)|修改账号备注|
+|[ModifyAccountPassword](../cn.zh-CN/API参考/账号管理/ModifyAccountPassword.md#)|修改账号密码|
+|[GrantAccountPrivilege](../cn.zh-CN/API参考/账号管理/GrantAccountPrivilege.md#)|账号授权|
+|[RevokeAccountPrivilege](../cn.zh-CN/API参考/账号管理/RevokeAccountPrivilege.md#)|撤销账号权限|
+|[ResetAccount](../cn.zh-CN/API参考/账号管理/ResetAccount.md#)|重置账号权限|
+|[DeleteAccount](../cn.zh-CN/API参考/账号管理/DeleteAccount.md#)|删除账号|
 
