--- a/cn.zh-CN/用户指南/数据库管理.md
+++ b/cn.zh-CN/用户指南/数据库管理.md
@@ -2,8 +2,6 @@
 
 您可以在控制台创建和管理所有的数据库。
 
-**说明：** POLARDB for PostgreSQL/Oracle暂不支持在控制台进行数据库管理，您可以通过SQL命令管理数据库。
-
 ## 创建数据库 {#section_efz_yt5_q2b .section}
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com)。
@@ -33,7 +31,7 @@
     -   长度为2~256个字符。
  |
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23963/155736790734698_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23963/155747458834698_zh-CN.png)
 
 7.  单击**确定**。
 
@@ -50,8 +48,8 @@
 
 |API|描述|
 |:--|:-|
-|[CreateDatabase](cn.zh-CN/API参考/数据库管理/CreateDatabase.md#)|创建数据库|
-|[DescribeDatabases](cn.zh-CN/API参考/数据库管理/DescribeDatabases.md#)|查看数据库列表信息|
+|[CreateDatabase](../../../../cn.zh-CN/API参考/数据库管理/CreateDatabase.md#)|创建数据库|
+|[DescribeDatabases](../../../../cn.zh-CN/API参考/数据库管理/DescribeDatabases.md#)|查看数据库列表信息|
 |[ModifyDBDescription](../../../../cn.zh-CN/API参考/数据库管理/ModifyDBDescription.md#)|修改数据库描述|
-|[DeleteDatabase](cn.zh-CN/API参考/数据库管理/DeleteDatabase.md#)|删除数据库|
+|[DeleteDatabase](../../../../cn.zh-CN/API参考/数据库管理/DeleteDatabase.md#)|删除数据库|
 
