--- a/cn.zh-CN/用户指南/备份与恢复/恢复数据.md
+++ b/cn.zh-CN/用户指南/备份与恢复/恢复数据.md
@@ -1,15 +1,12 @@
 # 恢复数据 {#concept_xb3_dlz_52b .concept}
 
-恢复POLARDB数据的过程如下：
+恢复POLARDB for MySQL数据的过程如下：
 
 1.  将历史数据恢复到新集群中。您可以选择以下其中一种恢复方式：
-
     -   [按时间点恢复（恢复到任意时间点）](#)
     -   [按备份集（快照）恢复](#)
-    **说明：** POLARDB for PostgreSQL/Oracle暂不支持按时间点恢复。
-
 2.  [登录到集群](../../../../cn.zh-CN/快速入门/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
-3.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md)。
+3.  [将需要的数据迁移到原集群](../../../../cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md#)。
 
 **说明：** 恢复后的集群包含原集群的数据和账号信息，不包含原集群的参数设置。
 
@@ -23,7 +20,7 @@
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**按时间点恢复**，在弹出的对话框中单击**确认** 。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/155736791534703_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/155747460034703_zh-CN.png)
 
 6.  在克隆实例页面中，选择新集群的计费方式：
     -   **预付费**：在创建集群时需要支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。如果您要长期使用该集群，**预付费**方式更加划算，而且购买时长越长，折扣越多。
@@ -67,11 +64,6 @@
     -   **购买时长**：预付费集群需要填写此参数。
     -   **集群数量**：默认为1，无法修改。
 8.  阅读并勾选**《云数据库 POLARDB服务协议》**，然后完成支付。
-
-## 下一步 {#section_dyr_y2f_v2b .section}
-
-1.  [登录到集群](../../../../cn.zh-CN/快速入门/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
-2.  [将需要的数据迁移到原集群](cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md)。
 
 ## 常见问题 {#section_rlc_yzk_qgb .section}
 
