--- a/cn.zh-CN/数据迁移__同步/数据迁移__同步方案概览.md
+++ b/cn.zh-CN/数据迁移__同步/数据迁移__同步方案概览.md
@@ -6,20 +6,21 @@
 
 |使用场景|文档链接|
 |----|----|
-|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB](cn.zh-CN/数据迁移__同步/从RDS for MySQL迁移至POLARDB.md#)|
-|从POLARDB迁移至RDS|[从POLARDB迁移至RDS for MySQL](cn.zh-CN/数据迁移__同步/从POLARDB迁移至RDS for MySQL.md#)|
-|从自建数据库迁移至POLARDB| -   [从本地 MySQL 迁移至 POLARDB](cn.zh-CN/数据迁移__同步/从本地 MySQL 迁移至 POLARDB.md#)
--   [从ECS上的自建MySQL迁移至POLARDB实例](cn.zh-CN/数据迁移__同步/从ECS上的自建MySQL迁移至POLARDB实例.md#)
+|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB.md#)|
+|从POLARDB迁移至RDS|[从POLARDB迁移至RDS for MySQL](cn.zh-CN/数据迁移__同步/数据迁移/从POLARDB迁移至RDS for MySQL.md#)|
+|从自建数据库迁移至POLARDB| -   [从本地 MySQL 迁移至 POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从本地 MySQL 迁移至 POLARDB.md#)
+-   [从ECS上的自建MySQL迁移至POLARDB实例](cn.zh-CN/数据迁移__同步/数据迁移/从ECS上的自建MySQL迁移至POLARDB实例.md#)
+-   [将自建Oracle迁移至POLARDB for Oracle](cn.zh-CN/数据迁移__同步/数据迁移/将自建Oracle迁移至POLARDB for Oracle.md#)
 
  |
-|从第三方云数据库迁移至POLARDB|[从AWS Aurora迁移至POLARDB](cn.zh-CN/数据迁移__同步/从AWS Aurora迁移至POLARDB.md#)|
-|POLARDB之间的数据迁移|[从POLARDB迁移至POLARDB](cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md#)|
+|从第三方云数据库迁移至POLARDB|[从AWS Aurora迁移至POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从AWS Aurora迁移至POLARDB.md#)|
+|POLARDB之间的数据迁移|[从POLARDB for MySQL迁移至POLARDB for MySQL](cn.zh-CN/数据迁移__同步/数据迁移/从POLARDB for MySQL迁移至POLARDB for MySQL.md#)|
 
 ## 数据同步 {#section_fc1_xry_zgb .section}
 
 |使用场景|文档链接|
 |----|----|
-|从RDS同步至POLARDB|[从RDS for MySQL实时同步至POLARDB](cn.zh-CN/数据迁移__同步/从RDS for MySQL实时同步至POLARDB.md#)|
-|从POLARDB同步至RDS|[从POLARDB实时同步至RDS for MySQL](cn.zh-CN/数据迁移__同步/从POLARDB实时同步至RDS for MySQL.md#)|
-|从POLARDB同步至POLARDB|[从POLARDB实时同步至POLARDB](cn.zh-CN/数据迁移__同步/从POLARDB实时同步至POLARDB.md#)|
+|从RDS同步至POLARDB|[从RDS for MySQL实时同步至POLARDB](cn.zh-CN/数据迁移__同步/数据同步/从RDS for MySQL实时同步至POLARDB.md#)|
+|从POLARDB同步至RDS|[从POLARDB实时同步至RDS for MySQL](cn.zh-CN/数据迁移__同步/数据同步/从POLARDB实时同步至RDS for MySQL.md#)|
+|从POLARDB同步至POLARDB|[从POLARDB实时同步至POLARDB](cn.zh-CN/数据迁移__同步/数据同步/从POLARDB实时同步至POLARDB.md#)|
 
