--- a/cn.zh-CN/数据迁移__同步/数据迁移__同步方案概览.md
+++ b/cn.zh-CN/数据迁移__同步/数据迁移__同步方案概览.md
@@ -6,11 +6,15 @@
 
 |使用场景|文档链接|
 |----|----|
-|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB.md#)|
+|从RDS迁移至POLARDB| -   [从RDS for MySQL迁移至POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB.md#)
+-   [使用命令行工具迁移RDS for PostgreSQL数据库至POLARDB for PostgreSQL](cn.zh-CN/数据迁移__同步/数据迁移/使用命令行工具迁移RDS for PostgreSQL数据库至POLARDB for PostgreSQL.md#)
+
+ |
 |从POLARDB迁移至RDS|[从POLARDB迁移至RDS for MySQL](cn.zh-CN/数据迁移__同步/数据迁移/从POLARDB迁移至RDS for MySQL.md#)|
 |从自建数据库迁移至POLARDB| -   [从本地 MySQL 迁移至 POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从本地 MySQL 迁移至 POLARDB.md#)
 -   [从ECS上的自建MySQL迁移至POLARDB实例](cn.zh-CN/数据迁移__同步/数据迁移/从ECS上的自建MySQL迁移至POLARDB实例.md#)
 -   [将自建Oracle迁移至POLARDB for Oracle](cn.zh-CN/数据迁移__同步/数据迁移/将自建Oracle迁移至POLARDB for Oracle.md#)
+-   [使用命令行工具迁移自建PostgreSQL数据库至POLARDB for PostgreSQL](cn.zh-CN/数据迁移__同步/数据迁移/使用命令行工具迁移自建PostgreSQL数据库至POLARDB for PostgreSQL.md#)
 
  |
 |从第三方云数据库迁移至POLARDB|[从AWS Aurora迁移至POLARDB](cn.zh-CN/数据迁移__同步/数据迁移/从AWS Aurora迁移至POLARDB.md#)|
