--- a/cn.zh-CN/产品简介/变更配置费用说明.md
+++ b/cn.zh-CN/产品简介/变更配置费用说明.md
@@ -1,10 +1,10 @@
 # 变更配置费用说明 {#concept_269560 .concept}
 
-## 按量付费集群变配费用说明 {#section_e1p_s4y_uqb .section}
+## 按量付费集群变配费用 {#section_e1p_s4y_uqb .section}
 
 按量付费集群是每小时收费，变更配置后按照新的售价每小时收费。
 
-## 包年包月集群变配费用说明 {#section_x16_us8_z4d .section}
+## 包年包月集群变配费用 {#section_x16_us8_z4d .section}
 
 |变配类型|费用说明|
 |----|----|
