--- a/cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移__同步方案概览.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移__同步方案概览.md
@@ -6,20 +6,20 @@
 
 |使用场景|文档链接|
 |----|----|
-|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB.md#)|
-|从POLARDB迁移至RDS|[从POLARDB迁移至RDS for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从POLARDB迁移至RDS for MySQL.md#)|
-|从自建数据库迁移至POLARDB| -   [从本地MySQL迁移至POLARDB](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从本地MySQL迁移至POLARDB.md#)
--   [从ECS上的自建MySQL迁移至POLARDB实例](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从ECS上的自建MySQL迁移至POLARDB实例.md#)
+|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB for MySQL.md#)|
+|从POLARDB迁移至RDS|[从POLARDB for MySQL迁移至RDS for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从POLARDB for MySQL迁移至RDS for MySQL.md#)|
+|从自建数据库迁移至POLARDB| -   [从本地MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从本地MySQL迁移至POLARDB for MySQL.md#)
+-   [从ECS上的自建MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从ECS上的自建MySQL迁移至POLARDB for MySQL.md#)
 
  |
-|从第三方云数据库迁移至POLARDB|[从AWS Aurora迁移至POLARDB](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从AWS Aurora迁移至POLARDB.md#)|
+|从第三方云数据库迁移至POLARDB|[从AWS Aurora迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从AWS Aurora迁移至POLARDB for MySQL.md#)|
 |POLARDB之间的数据迁移|[从POLARDB for MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从POLARDB for MySQL迁移至POLARDB for MySQL.md#)|
 
 ## 数据同步 {#section_fc1_xry_zgb .section}
 
 |使用场景|文档链接|
 |----|----|
-|从RDS同步至POLARDB|[从RDS for MySQL实时同步至POLARDB](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从RDS for MySQL实时同步至POLARDB.md#)|
-|从POLARDB同步至RDS|[从POLARDB实时同步至RDS for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从POLARDB实时同步至RDS for MySQL.md#)|
-|从POLARDB同步至POLARDB|[从POLARDB实时同步至POLARDB](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从POLARDB实时同步至POLARDB.md#)|
+|从RDS同步至POLARDB|[从RDS for MySQL同步至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从RDS for MySQL同步至POLARDB for MySQL.md#)|
+|从POLARDB同步至RDS|[从POLARDB for MySQL同步至RDS for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从POLARDB for MySQL同步至RDS for MySQL.md#)|
+|从POLARDB同步至POLARDB|[从POLARDB for MySQL同步至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据同步/从POLARDB for MySQL同步至POLARDB for MySQL.md#)|
 
