--- a/cn.zh-CN/产品简介/变更配置费用说明.md
+++ b/cn.zh-CN/产品简介/变更配置费用说明.md
@@ -11,7 +11,7 @@
 |升配或增加节点|支付费用 = 新配置剩余时长总价（新配置的月单价/30/24 × 包年包月剩余时长）- 老配置价格剩余时长总价（老配置的月单价/30/24 × 包年包月剩余时长） 示例：新配置月单价14400元，老配置月单价7200元，包年包月剩余天数50天，则需要支付\(14400/30/24x50x24\)-\(7200/30/24x50x24\)=12000元。
 
  |
-|降配或删除节点|退款费用 = 老配置剩余时长总价 - 新配置剩余时长总价（新配置的月单价/30/24 × 包年包月剩余时长） 示例：当前配置包3个月的费用为3500，使用代金券后实际支付3000元，使用两个月后剩余时长总价为1000元，新配置1个月价格为800，则退费1000-800=200元。
+|降配或删除节点|退款费用 = 老配置剩余时长总价 - 新配置剩余时长总价（新配置的月单价/30/24 × 包年包月剩余时长） 示例：当前配置包3个月的费用为3500，使用代金券后实际支付3000元，使用2个月后剩余时长总价为1000元，新配置1个月价格为800，则退费1000-800=200元。
 
  **说明：** 预付费集群可以降配退款但不支持将整个集群退款。如果您确实需要，请通过工单提交申请。一旦申请通过，使用预付费的集群将被冻结，14天后自动删除。
 
