--- a/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群/查看连接地址.md
+++ b/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群/查看连接地址.md
@@ -12,7 +12,7 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 
 |地址类型|地址说明|支持的网络类型|查看方式|
 |----|----|-------|----|
-|集群地址（推荐）|应用程序只需连接一个集群地址，即可连接到多个节点。带有读写分离功能，写请求会自动发往主节点，读请求会自动根据各节点的负载发往主节点或只读节点。 **说明：** POLARDB包含一个默认的集群地址，您还可以根据业务需求创建多个自定义的集群地址，详情请参见[设置/释放自定义地址](../../../../cn.zh-CN/用户指南/集群管理/设置__释放自定义集群地址.md#)。
+|集群地址（推荐）|应用程序只需连接一个集群地址，即可连接到多个节点。带有读写分离功能，写请求会自动发往主节点，读请求会自动根据各节点的负载发往主节点或只读节点。 **说明：** POLARDB包含一个默认的集群地址，您还可以根据业务需求创建多个自定义的集群地址，详情请参见[设置/释放自定义地址](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/设置__释放自定义集群地址.md#)。
 
  |私网和公网| 1.  找到目标集群，单击集群的ID。
 2.  在**访问信息**区域查看。
@@ -23,7 +23,7 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 
  |私网|
 
-![连接地址示意图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3018/155747438945542_zh-CN.png)
+![连接地址示意图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3018/155927996345542_zh-CN.png)
 
 ## 私网地址和公网地址 {#section_xxt_kpv_tdb .section}
 
@@ -49,6 +49,6 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 |:--|:-|
 |[DescribeDBClusterEndpoints](../../../../cn.zh-CN/API参考/访问地址/DescribeDBClusterEndpoints.md#)|查询集群的地址信息|
 |[CreateDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/CreateDBEndpointAddress.md#)|创建集群的公网地址|
-|[ModifyDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改访问点地址|
-|[DeleteDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|删除访问点地址|
+|[ModifyDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改集群默认访问地址|
+|[DeleteDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|释放集群地址|
 
