--- a/cn.zh-CN/POLARDB for Oracle快速入门/连接数据库集群/查看连接地址.md
+++ b/cn.zh-CN/POLARDB for Oracle快速入门/连接数据库集群/查看连接地址.md
@@ -34,6 +34,6 @@
 |:--|:-|
 |[DescribeDBClusterEndpoints](../cn.zh-CN/API参考/访问地址/DescribeDBClusterEndpoints.md#)|查询集群的地址信息|
 |[CreateDBEndpointAddress](../cn.zh-CN/API参考/访问地址/CreateDBEndpointAddress.md#)|创建集群的公网地址|
-|[ModifyDBEndpointAddress](../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改访问点地址|
-|[DeleteDBEndpointAddress](../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|删除访问点地址|
+|[ModifyDBEndpointAddress](../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改集群默认访问地址|
+|[DeleteDBEndpointAddress](../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|释放集群地址|
 
