--- a/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/增加或删除节点.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/增加或删除节点.md
@@ -2,6 +2,10 @@
 
 创建POLARDB集群后，您可以手动增加或删除只读节点。集群最多包含15个只读节点，最少一个只读节点（用于保障集群的高可用）。同一集群中，所有节点的规格总是保持一致。
 
+## 节点数量对性能的影响 {#section_cru_q2g_5gk .section}
+
+详情请参见[POLARDB for MySQL性能白皮书](../../../../cn.zh-CN/性能白皮书/POLARDB for MySQL性能白皮书.md#image_spr_wgj_h2b)。
+
 ## 节点费用 {#section_1td_0zq_p6k .section}
 
 增加节点时的计费方式如下：
@@ -26,11 +30,11 @@
 2.  选择地域。
 3.  找到目标集群，在**操作**列中单击**增节点**，或者在基本信息页面下方单击**增加节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866175634661_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062034661_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866175613618_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062013618_zh-CN.png)
 
-4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15586617573597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
+4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15592806203597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
 
 ## 删除只读节点 {#section_fkk_13d_lfb .section}
 
@@ -40,11 +44,11 @@
 2.  选择地域。
 3.  找到目标集群，在操作列中选择**…** \> **减节点**，或者在基本信息页面下方单击**减少节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866175734666_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062034666_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866175713619_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062013619_zh-CN.png)
 
-4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15586617573601_zh-CN.png)，并在弹出对话框中单击**确定**。
+4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15592806203601_zh-CN.png)，并在弹出对话框中单击**确定**。
 
     **说明：** 集群中必须保留至少一个只读节点，以保障集群的高可用。
 
