--- a/cn.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md
@@ -1,14 +1,52 @@
 # 手动续费集群 {#concept_tpr_jqq_tdb .concept}
 
-只有预付费（包年包月）的集群才需要执行续费，后付费（按小时付费）的实例不涉及。
+您可以通过POLARDB控制台或续费管理控制台进行手动续费。通过续费管理控制台还可以为多个实例进行批量续费。
 
-## 操作步骤 {#section_zvl_cmt_g2b .section}
+**说明：** 按小时付费集群没有到期时间，不涉及续费操作。
+
+## 方法一：POLARDB控制台续费 {#section_zvl_cmt_g2b .section}
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  在左上角选择地域，即可显示您账号在该地域的所有集群。
-3.  找到目标集群，在**操作**列中选择**...** \> **续费**。
+3.  找到目标集群，在右侧选择**...** \> **续费**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15574754122102_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15592901462102_zh-CN.png)
 
 4.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
+
+## 方法二：续费管理控制台续费 {#section_hv5_e2c_tpw .section}
+
+1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
+2.  在控制台右上方，选择**费用** \> **续费管理**。
+
+    ![续费管理控制台](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/155929014648357_zh-CN.png)
+
+3.  在控制台左上角单击**体验新版**，切换到新版控制台。
+
+    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/155929014648373_zh-CN.png)
+
+4.  通过搜索过滤功能在手动续费页签中找到目标集群，您可以单个续费或批量续费：
+    -   **单个续费** 
+        1.  在目标集群右侧单击**续费**。
+
+![续费集群2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/155929014648358_zh-CN.png)
+
+**说明：** 
+
+-   示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后进行续费操作。
+-   如果目标集群在自动续费或到期不续费页签中，您可以单击**恢复手动续费**，在弹出的对话框中单击**确定**即可恢复为手动续费。
+        2.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
+    -   **批量续费** 
+        1.  勾选目标集群，单击下方**批量续费**。
+
+            ![批量续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/155929014648379_zh-CN.png)
+
+        2.  选择每个集群的**续费时长**，单击**去支付**完成支付即可。
+
+            ![批量续费修改](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/155929014648382_zh-CN.png)
+
+
+## 自动续费 {#section_jaq_119_mim .section}
+
+开通自动续费可以免去您定期手动续费的烦恼，且不会因为忘记续费而导致业务中断。详情请参见[开通或修改自动续费](cn.zh-CN/POLARDB for MySQL用户指南/计费管理/自动续费.md#)。
 
