--- a/cn.zh-CN/相关协议/服务等级协议.md
+++ b/cn.zh-CN/相关协议/服务等级协议.md
@@ -23,9 +23,10 @@
 3.  赔偿方案
     1.  赔偿标准每个POLARDB实例按单实例月度服务可用性，按照下表中的标准计算赔偿金额 ，赔偿方式仅限于用于购买POLARDB产品的代金券，且赔偿总额不超过未达到服务可用性承诺当月客户支付的月度服务费用的25% （不含用代金券抵扣的费用）。
 
-        服务可用性 赔偿代金券金额99.90% ≤ 服务可用性 ＜ 99.95% 月度服务费用的10%
-
-        服务可用性 ＜ 99.90% 月度服务费用的25%
+        |服务可用性|赔偿代金券金额|
+        |-----|-------|
+        |99.90% ≤ 服务可用性 ＜ 99.95%|月度服务费用的10%|
+        |服务可用性 ＜ 99.90%|月度服务费用的25%|
 
     2.  赔偿申请时限客户可在每个自然月第五（5）个工作日后对上个月没有达到服务可用性承诺的实例提出赔偿申请。赔偿申请最迟不应晚于POLARDB未达到服务可用性承诺的相关月份结束后两（2）个月内提出。
 4.  其他阿里云有权对本SLA条款作出修改。如本SLA条款有任何修改，阿里云将提前30天以网站公示或发送邮件的方式通知您。如您不同意阿里云对SLA所做的修改，您有权停止使用POLARDB，如您继续使用POLARDB，则视为您接受修改后的SLA。
