--- a/cn.zh-CN/POLARDB for PostgreSQL用户指南/诊断与优化/性能监控与报警.md
+++ b/cn.zh-CN/POLARDB for PostgreSQL用户指南/诊断与优化/性能监控与报警.md
@@ -8,17 +8,36 @@
 2.  选择地域。
 3.  找到目标集群，单击集群名称列的**集群ID**。
 4.  在左侧导航栏中选择**诊断与优化** \> **性能监控**。
-5.  根据您的需求，可以查看**集群**或**节点**的监控信息。
+5.  根据您的需求，可以查看**集群**或**节点**的监控信息。详细说明请参见[监控项说明](#)。
     -   集群性能监控：单击**集群**，在右侧设置时间段后单击**确定**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217487/155747531846921_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217487/156015938746921_zh-CN.png)
 
     -   节点性能监控：单击**节点**，在右侧选择节点并设置时间段后单击**确定**。
 
         **说明：** 节点页面下方单击**显示更多**，会显示更多监控项。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217487/155747531846922_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217487/156015938746922_zh-CN.png)
 
+
+## 监控项说明 {#section_ab1_kij_u21 .section}
+
+|类别|监控项|说明|
+|--|---|--|
+|集群|存储空间|展示数据空间、日志空间、临时空间和WAL日志空间的使用量。|
+|CPU|展示各节点的CPU使用率。|
+|内存|展示各节点的内存使用率。|
+|节点|TPS|展示所选择节点的每秒事务数，包括每秒提交事务数、每秒死锁事务数、每秒回滚事务数等等。|
+|CPU|展示所选择节点的CPU使用率。|
+|内存|展示所选择节点的内存使用率。|
+|连接|展示所选择节点的当前总连接数、活跃连接数和空闲连接数。|
+|扫描行数|展示所选择节点每秒插入、读取、更新、删除、返回的行数。|
+|数据库最大年龄|数据库最旧和最新的两个事务之间的事务ID差值。|
+|I/O吞吐量|展示所选择节点的总I/O吞吐量、读I/O吞吐量、写I/O吞吐量。|
+|IOPS|展示所选择节点的每秒读写次数，包括每秒读写总次数、每秒读次数、每秒写次数。|
+|缓存|展示所选择节点每秒缓存读取次数和每秒磁盘读取次数。|
+|缓存命中率|展示所选择节点的缓存命中率。|
+|临时文件|展示所选择节点的临时文件数量和总大小。|
 
 ## 设置报警 {#section_ugr_15h_1gb .section}
 
