--- a/cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移__同步方案概览.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移__同步方案概览.md
@@ -6,7 +6,11 @@
 
 |使用场景|文档链接|
 |----|----|
-|从RDS迁移至POLARDB|[从RDS for MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB for MySQL.md#)|
+|从RDS迁移至POLARDB| -   [一键升级RDS for MySQL到POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/一键升级RDS for MySQL到POLARDB for MySQL.md#)
+-   [一键克隆RDS for MySQL到POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/一键克隆RDS for MySQL到POLARDB for MySQL.md#)
+-   [从RDS for MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从RDS for MySQL迁移至POLARDB for MySQL.md#)
+
+ |
 |从POLARDB迁移至RDS|[从POLARDB for MySQL迁移至RDS for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从POLARDB for MySQL迁移至RDS for MySQL.md#)|
 |从自建数据库迁移至POLARDB| -   [从本地MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从本地MySQL迁移至POLARDB for MySQL.md#)
 -   [从ECS上的自建MySQL迁移至POLARDB for MySQL](cn.zh-CN/POLARDB for MySQL用户指南/数据迁移__同步/数据迁移/从ECS上的自建MySQL迁移至POLARDB for MySQL.md#)
