--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -21,7 +21,7 @@ POLARDB支持以下两种付费方式：
 |---|--|
 |[计算集群（主节点和只读节点）](#)|**包年包月**或**按小时付费**。|
 |[存储空间](#)|**按小时付费**。|
-|[SQL洞察](#)|开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/用户指南/SQL洞察.md#)。|
+|[SQL洞察](#)|开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 售价 {#section_f4v_rpg_tdb .section}
@@ -124,6 +124,8 @@ POLARDB支持以下两种付费方式：
 
  |
 
+    **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+
     |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
     |:---|:------|:-----|:----|----|------|-----|--|
     |polar.pg.x4.medium| 2核
@@ -209,14 +211,14 @@ POLARDB支持以下两种付费方式：
     -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
 -   **存储空间价格**
 
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
+    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
     -   中国大陆地域：每GB 0.00486元，按小时扣费。
     -   中国香港地域： 每GB 0.00542元，按小时扣费。
     **说明：** 
 
     -   存储空间容量按小时扣费，不支持包年包月。
-    -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品简介/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/用户指南/集群管理/变更配置.md)。
+    -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 -   **SQL洞察价格**
 
     SQL洞察按照审计日志存储的容量收取费用，每GB 0.008元，按小时扣费。
@@ -238,6 +240,6 @@ POLARDB支持以下两种付费方式：
 
     **答**：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
 
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品简介/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/用户指南/集群管理/变更配置.md)。
+    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
 
