--- a/cn.zh-CN/产品简介/产品优势.md
+++ b/cn.zh-CN/产品简介/产品优势.md
@@ -51,6 +51,7 @@
 
 -   共享分布式存储的设计，彻底解决了Master-Slave异步复制所带来的备库数据非强一致的缺陷，使得整个数据库集群在应对任何单点故障时，可以保证数据0丢失。
 -   采用Active-Active的高可用集群架构，可读写的主节点和只读节点之间进行Failover切换，与传统的Active-Standby相比，用同样成本带来了更好的系统访问性能。
+-   多可用区架构，在多个可用区内都有数据备份，为数据库提供容灾和备份。
 
 ## 数据安全可靠 {#section_mpv_tvf_tdb .section}
 
