--- a/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md
@@ -10,7 +10,7 @@
 
 ## 变更配置的费用说明 {#section_il7_gej_pvr .section}
 
-[变更配置费用说明](../../../../cn.zh-CN/产品定价/变更配置费用说明.md#)
+详情请参见[变更配置费用说明](../../../../cn.zh-CN/产品定价/变更配置费用说明.md#)。
 
 ## 前提条件 {#section_ldy_dxo_83l .section}
 
@@ -29,9 +29,9 @@
 2.  在左上角选择地域。
 3.  找到目标集群，在**操作**列中选择**升配**或**降配**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049327913607_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049389913607_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049327934579_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049389934579_zh-CN.png)
 
 4.  选择所需的规格。
 
