--- a/cn.zh-CN/POLARDB for PostgreSQL用户指南/集群管理/变更配置.md
+++ b/cn.zh-CN/POLARDB for PostgreSQL用户指南/集群管理/变更配置.md
@@ -8,13 +8,16 @@
 
 本文介绍如何升级或降级集群的规格，新规格会**立即开始生效**（每个节点需要5到10分钟）。
 
+## 变更配置的费用说明 {#section_u05_drw_4d7 .section}
+
+详情请参见[变更配置费用说明](../cn.zh-CN/产品定价/变更配置费用说明.md#)。
+
 ## 前提条件 {#section_eiz_1hh_inw .section}
 
 集群没有正在进行的配置变更时，才可以变更集群规格。
 
 ## 注意事项 {#section_qyh_gni_088 .section}
 
--   变更配置的费用说明请参见[变更配置费用说明](../cn.zh-CN/产品简介/变更配置费用说明.md#)。
 -   您只能对整个集群进行规格升降级，无法对集群中的单个节点进行规格升降级。
 -   集群规格的升降级不会对集群中已有数据造成任何影响。
 -   在集群规格变更期间， POLARDB服务会出现几秒钟的闪断且部分操作不能执行的状况，建议您在业务低谷期执行变更。闪断后需在应用端重新连接。
@@ -25,9 +28,9 @@
 2.  在左上角选择地域。
 3.  找到目标集群，在**操作**列中选择**升配**或**降配**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/155848902013607_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049393413607_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/155848902034579_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049393434579_zh-CN.png)
 
 4.  选择所需的规格。
 
@@ -37,4 +40,10 @@
 
     **说明：** 集群中每个节点的规格变更需要5到10分钟的时间。
 
+
+## 相关API {#section_wr5_jid_6ru .section}
+
+|API|描述|
+|---|--|
+|[ModifyDBNodeClass](../cn.zh-CN/API参考/节点管理/ModifyDBNodeClass.md#)|变更POLARDB集群节点规格。|
 
