--- a/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/变更配置.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/变更配置.md
@@ -8,9 +8,9 @@
 
 本文介绍如何升级或降级集群的规格，新规格会**立即开始生效**（每个节点需要5到10分钟）。
 
-## 变更配置的费用说明 {#section_njg_fkd_n98 .section}
+## 变更配置的费用说明 {#section_5nt_9cc_sqj .section}
 
-[变更配置费用说明](../cn.zh-CN/产品定价/变更配置费用说明.md#)
+详情请参见[变更配置费用说明](../cn.zh-CN/产品定价/变更配置费用说明.md#)。
 
 ## 前提条件 {#section_gxc_2qp_0rv .section}
 
@@ -28,9 +28,9 @@
 2.  在左上角选择地域。
 3.  找到目标集群，在**操作**列中选择**升配**或**降配**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049329713607_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049395113607_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049329734579_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156049395234579_zh-CN.png)
 
 4.  选择所需的规格。
 
@@ -41,7 +41,7 @@
     **说明：** 集群中每个节点的规格变更需要5到10分钟的时间。
 
 
-## 相关API {#section_mco_lpt_sj5 .section}
+## 相关API { .section}
 
 |API|描述|
 |---|--|
