--- a/cn.zh-CN/POLARDB for MySQL快速入门/设置集群白名单.md
+++ b/cn.zh-CN/POLARDB for MySQL快速入门/设置集群白名单.md
@@ -16,8 +16,15 @@
 2.  找到目标集群，单击**集群名称**列的集群ID，进入基本信息页面。
 3.  在**访问信息**区域，单击**白名单列表**右侧的**配置**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3015/155747514513598_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3015/156049477113598_zh-CN.png)
 
 4.  在**配置白名单**对话框中，添加服务器IP地址以允许这些服务器访问数据库集群。
 5.  单击**提交**。
+
+## 相关API {#section_vmn_oq1_skb .section}
+
+|API|描述|
+|:--|:-|
+|[DescribeDBClusterAccessWhiteList](../../../../cn.zh-CN/API参考/白名单管理/DescribeDBClusterAccessWhiteList.md#)|查看允许访问数据库集群的IP名单|
+|[ModifyDBClusterAccessWhiteList](../../../../cn.zh-CN/API参考/白名单管理/ModifyDBClusterAccessWhiteList.md#)|修改允许访问数据库集群的IP名单|
 
