--- a/cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md
@@ -8,7 +8,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
     在POLARDB的链路中间层做读写分离的同时，中间层会track各个节点已经apply了的redolog位点即LSN，同时每次更新时会记录此次更新的位点为Session LSN, 当有新请求到来时我们会比较Session LSN 和当前各个节点的LSN，仅将请求发往LSN \>= Session LSN的节点，从而保证了会话一致性；表面上看该方案可能导致主库压力大，但是因为POLARDB是物理复制，速度极快，在上述场景中，当更新完成后，返回客户端结果时复制就同步在进行，而当下一个读请求到来时主从极有可能已经完成，然后大多数应用场景都是读多写少，所以经验证在该机制下即保证了会话一致性，也保证了读写分离负载均衡的效果。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/155841788634632_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/156049573034632_zh-CN.png)
 
 -   **原生支持读写分离，提升性能** 
 
@@ -71,7 +71,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
 6.  单击**修改**，设置新的集群地址，并单击**提交**。
 
-    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/155841788645064_zh-CN.png)
+    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/156049573145064_zh-CN.png)
 
 
 ## FAQs {#section_hrr_m55_j2b .section}
@@ -96,4 +96,16 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
     新增只读节点之后新建的读写分离连接会转发请求到该只读节点。新增只读节点之前建立的读写分离连接不会转发请求到新增的只读节点，需要断开该连接并重新建立连接，例如，重启应用。
 
+
+## 相关API {#section_06u_a6e_ibo .section}
+
+|API|描述|
+|:--|:-|
+|[CreateDBEndpointAddress](../cn.zh-CN/API参考/访问地址/CreateDBEndpointAddress.md#)|创建POLARDB集群的公网地址|
+|[CreateDBClusterEndpoint](../cn.zh-CN/API参考/访问地址/CreateDBClusterEndpoint.md#)|创建POLARDB自定义集群地址|
+|[DescribeDBClusterEndpoints](../cn.zh-CN/API参考/访问地址/DescribeDBClusterEndpoints.md#)|查询POLARDB集群的地址信息|
+|[ModifyDBClusterEndpoint](../cn.zh-CN/API参考/访问地址/ModifyDBClusterEndpoint.md#)|修改POLARDB集群地址属性|
+|[ModifyDBEndpointAddress](../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改POLARDB集群默认访问地址前缀|
+|[DeleteDBEndpointAddress](../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|释放POLARDB集群地址（除了自定义集群地址的私网地址）|
+|[DeleteDBClusterEndpoint](../cn.zh-CN/API参考/访问地址/DeleteDBClusterEndpoint.md#)|释放POLARDB自定义集群地址|
 
