--- a/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/增加或删除节点.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/增加或删除节点.md
@@ -15,8 +15,8 @@
 
 **说明：** 
 
--   包年包月和按小时付费的只读节点都可以随时释放，释放后会[退款或停止计费](../../../../cn.zh-CN/产品简介/变更配置费用说明.md#)。
--   增加节点仅收取节点规格的费用（详情请参见[规格与定价](../../../../cn.zh-CN/产品简介/规格与定价.md#)），存储费用仍然按实际使用量收费，与节点数量无关。
+-   包年包月和按小时付费的只读节点都可以随时释放，释放后会[退款或停止计费](../../../../cn.zh-CN/产品定价/变更配置费用说明.md#)。
+-   增加节点仅收取节点规格的费用（详情请参见[规格与定价](../../../../cn.zh-CN/产品定价/规格与定价.md#)），存储费用仍然按实际使用量收费，与节点数量无关。
 
 ## 注意事项 {#section_wbj_c3d_lfb .section}
 
@@ -30,11 +30,11 @@
 2.  选择地域。
 3.  找到目标集群，在**操作**列中单击**增节点**，或者在基本信息页面下方单击**增加节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062034661_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156049642334661_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062013618_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156049642413618_zh-CN.png)
 
-4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15592806203597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
+4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15604964243597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
 
 ## 删除只读节点 {#section_fkk_13d_lfb .section}
 
@@ -44,13 +44,22 @@
 2.  选择地域。
 3.  找到目标集群，在操作列中选择**…** \> **减节点**，或者在基本信息页面下方单击**减少节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062034666_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156049642434666_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155928062013619_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156049642413619_zh-CN.png)
 
-4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15592806203601_zh-CN.png)，并在弹出对话框中单击**确定**。
+4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15604964243601_zh-CN.png)，并在弹出对话框中单击**确定**。
 
     **说明：** 集群中必须保留至少一个只读节点，以保障集群的高可用。
 
 5.  勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**确认**。
+
+## 相关API {#section_jbv_dpc_aly .section}
+
+|API|描述|
+|:--|:-|
+|[CreateDBNodes](../../../../cn.zh-CN/API参考/节点管理/CreateDBNodes.md#)|增加POLARDB集群节点|
+|[ModifyDBNodeClass](../../../../cn.zh-CN/API参考/节点管理/ModifyDBNodeClass.md#)|变更POLARDB集群节点规格|
+|[RestartDBNode](../../../../cn.zh-CN/API参考/节点管理/RestartDBNode.md#)|重启POLARDB集群节点|
+|[DeleteDBNodes](../../../../cn.zh-CN/API参考/节点管理/DeleteDBNodes.md#)|删除POLARDB集群节点|
 
