--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -4,9 +4,9 @@
 
 POLARDB支持以下两种付费方式：
 
--   **包年包月（也称为预付费）**： 在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
+-    **包年包月（也称为预付费）**： 在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
 
--   **按小时付费（也称为按量付费、后付费）**： 无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
+-    **按小时付费（也称为按量付费、后付费）**： 无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
 
 
 **说明：** 
@@ -19,16 +19,18 @@ POLARDB支持以下两种付费方式：
 
 |收费项|说明|
 |---|--|
-|[计算集群（主节点和只读节点）](#)|**包年包月**或**按小时付费**。|
-|[存储空间](#)|**按小时付费**。|
-|[SQL洞察](#)|开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
+| [计算集群（主节点和只读节点）](#) | **包年包月**或**按小时付费**。|
+| [存储空间](#) | **按小时付费**。|
+| [SQL洞察](#) |开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 售价 {#section_f4v_rpg_tdb .section}
 
--   **计算节点价格**
+-    **计算节点价格** 
 
     POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。
+
+    **说明：** POLARDB for MySQL 8.0公测中，[点此申请](https://page.aliyun.com/form/act951838896/index.htm)。
 
     |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|中国大陆地域|中国香港地域|
     |:---|:------|:-----|:----|----|------|-----|------|------|
@@ -204,12 +206,12 @@ POLARDB支持以下两种付费方式：
 
     **说明：** 
 
-    -   ****以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。****
+    -    ** **以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。** ** 
     -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
-    -   **最大IOPS**为理论换算值。
+    -    **最大IOPS**为理论换算值。
     -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
     -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
--   **存储空间价格**
+-    **存储空间价格** 
 
     存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
@@ -219,26 +221,26 @@ POLARDB支持以下两种付费方式：
 
     -   存储空间容量按小时扣费，不支持包年包月。
     -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
--   **SQL洞察价格**
+-    **SQL洞察价格** 
 
     SQL洞察按照审计日志存储的容量收取费用，每GB 0.008元，按小时扣费。
 
     **说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
 
--   **数据备份价格**
+-    **数据备份价格** 
 
     POLARDB备份文件占用的存储空间暂不收费。
 
 
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
--   **问**：如果增加一个只读节点，价格如何收费？
+-    **问**：如果增加一个只读节点，价格如何收费？
 
-    **答**：只读节点的价格和主节点的价格一致，请参见上面的[节点规格及售价](#)。
+     **答**：只读节点的价格和主节点的价格一致，请参见上面的[节点规格及售价](#)。
 
--   **问**：如果增加一个只读节点，存储容量是否会增大一倍？
+-    **问**：如果增加一个只读节点，存储容量是否会增大一倍？
 
-    **答**：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
+     **答**：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
 
     存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
