--- a/cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md
+++ b/cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md
@@ -1,6 +1,6 @@
 # 查看连接地址 {#concept_imd_wlq_tdb .concept}
 
-POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址和SQL加速访问地址。
+POLARDB for MySQL数据库连接地址包括集群访问地址和主访问地址。
 
 ## 查看方法 {#section_5cl_22o_hob .section}
 
@@ -8,7 +8,7 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 2.  找到目标集群，单击集群的ID。
 3.  在访问信息区域查看连接地址。
 
-## 集群地址、主地址和SQL加速地址 {#section_gnz_ejy_y15 .section}
+## 集群地址和主地址 {#section_gnz_ejy_y15 .section}
 
 |地址类型|地址说明|支持的网络类型|查看方式|
 |----|----|-------|----|
@@ -19,13 +19,8 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 
  |
 |主地址|总是连接到主节点，支持读和写操作。当主节点发生故障时，主访问地址会自动切换到新的主节点。|私网和公网|
-|SQL加速地址|把读请求发往所有的只读实例，并行计算，对复杂SQL有很好的加速效果。 不会转发请求到主实例，避免对主实例的影响。
 
- **说明：** MySQL 8.0暂不支持SQL加速地址。
-
- |私网和公网|
-
-![连接地址示意图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3018/156153421945542_zh-CN.png)
+![连接地址示意图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3018/156342807545542_zh-CN.png)
 
 ## 私网地址和公网地址 {#section_xxt_kpv_tdb .section}
 
@@ -49,8 +44,8 @@ POLARDB for MySQL数据库连接地址包括集群访问地址、主访问地址
 
 |API|描述|
 |:--|:-|
-| [DescribeDBClusterEndpoints](../../../../cn.zh-CN/API参考/访问地址/DescribeDBClusterEndpoints.md#) |查询集群的地址信息|
-| [CreateDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/CreateDBEndpointAddress.md#) |创建集群的公网地址|
-| [ModifyDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#) |修改集群默认访问地址|
-| [DeleteDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#) |释放集群地址|
+|[DescribeDBClusterEndpoints](../../../../cn.zh-CN/API参考/访问地址/DescribeDBClusterEndpoints.md#)|查询集群的地址信息|
+|[CreateDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/CreateDBEndpointAddress.md#)|创建集群的公网地址|
+|[ModifyDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/ModifyDBEndpointAddress.md#)|修改集群默认访问地址|
+|[DeleteDBEndpointAddress](../../../../cn.zh-CN/API参考/访问地址/DeleteDBEndpointAddress.md#)|释放集群地址|
 
