--- a/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/连接数据库集群.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/连接数据库集群.md
@@ -8,22 +8,22 @@
 
 **前提条件**
 
-已创建数据库集群的高权限账号或普通账号。具体操作请参见[创建数据库账号](cn.zh-CN/快速入门/创建数据库账号.md#)。
+已创建数据库集群的高权限账号或普通账号。具体操作请参见[创建数据库账号](cn.zh-CN/POLARDB for MySQL快速入门/创建数据库账号.md#)。
 
 **操作步骤**
 
 1.  找到目标集群，单击集群ID，进入基本信息页面。
 2.  单击页面右上角的**登录数据库**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15574745472084_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634290412084_zh-CN.png)
 
 3.  在数据库登录页面，输入主地址和端口号（以英文冒号隔开），以及高权限账号或普通账号的用户名和密码，然后单击**登录**。
 
-    **说明：** DMS登录仅支持主地址，不支持集群地址和SQL加速地址。
+    **说明：** DMS登录仅支持主地址，不支持集群地址。
 
-    关于如何查看连接地址，请参见[查看连接地址](cn.zh-CN/快速入门/连接数据库集群/查看连接地址.md)。
+    关于如何查看连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15574745472085_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634290422085_zh-CN.png)
 
 
 ## 使用客户端登录POLARDB {#section_pfm_qmq_tdb .section}
@@ -34,15 +34,15 @@
 
 **操作步骤**
 
-1.  将要访问POLARDB集群的客户端IP地址加入POLARDB白名单中。关于如何设置白名单，请参见[设置集群白名单](cn.zh-CN/快速入门/设置集群白名单.md)。
+1.  将要访问POLARDB集群的客户端IP地址加入POLARDB白名单中。关于如何设置白名单，请参见[设置集群白名单](cn.zh-CN/POLARDB for MySQL快速入门/设置集群白名单.md)。
 2.  启动MySQL-Front客户端。
 3.  在**打开登录信息**窗口，单击**新建**，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15574745472088_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15634290422088_zh-CN.png)
 
 4.  输入连接信息：
     -   **名称**：MySQL-Front连接数据库的任务名称。若不填，则默认与Host一致。
-    -   **Host**：输入连接地址。关于如何查看和选择连接地址，请参见[查看连接地址](cn.zh-CN/快速入门/连接数据库集群/查看连接地址.md#)。
+    -   **Host**：输入连接地址。关于如何查看和选择连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)。
 
         （**注意：**输入的连接地址不包括端口号。连接地址示例：abc.mysql.polardb.cnsh.rds.aliyuncs.com）
 
@@ -52,7 +52,7 @@
 5.  单击**确定**。
 6.  在打开**登录信息**窗口，选中刚才创建的连接，单击**打开**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15574745472090_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15634290422090_zh-CN.png)
 
     若连接信息无误，即可成功连接POLARDB。
 
