--- a/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/连接数据库集群.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/连接数据库集群.md
@@ -15,15 +15,15 @@
 1.  找到目标集群，单击集群ID，进入基本信息页面。
 2.  单击页面右上角的**登录数据库**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15611033052084_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634293112084_zh-CN.png)
 
 3.  在数据库登录页面，输入主地址和端口号（以英文冒号隔开），以及高权限账号或普通账号的用户名和密码，然后单击**登录**。
 
-    **说明：** DMS登录仅支持主地址，不支持集群地址和SQL加速地址。
+    **说明：** DMS登录仅支持主地址，不支持集群地址。
 
     关于如何查看连接地址，请参见[查看连接地址](../cn.zh-CN/POLARDB for PostgreSQL快速入门/查看连接地址.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15611033052085_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634293112085_zh-CN.png)
 
 
 ## 通过客户端连接 {#section_qbh_l4u_ux6 .section}
@@ -33,15 +33,15 @@
 1.  启动pgAdmin 4客户端。
 2.  右击**Servers**，选择**创建** \> **服务器** ，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156110330546889_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156342931246889_zh-CN.png)
 
 3.  在创建-服务器页面的通常标签页面中，输入服务器名称，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156110330546890_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156342931246890_zh-CN.png)
 
 4.  选择Connection标签页，输入要连接的实例信息，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156110330646892_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156342931246892_zh-CN.png)
 
     **参数说明**：
 
@@ -51,7 +51,7 @@
         2.  找到目标集群，单击集群的ID。
         3.  在访问信息区域查看地址及端口信息。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217586/156110330646980_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217586/156342931246980_zh-CN.png)
 
     -   **端口**：需输入POLARDB集群的内网端口。
     -   **用户名**：POLARDB集群的高权限账号名称。
@@ -61,6 +61,6 @@
 
     **说明：** edb和postgres是POLARDB for Oracle集群默认的系统数据库，请勿在这两个数据库中进行任何操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156110330646893_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/217461/156342931246893_zh-CN.png)
 
 
