--- a/cn.zh-CN/POLARDB for MySQL用户指南/功能动态.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/功能动态.md
@@ -7,7 +7,7 @@
 -   为了使用最新的功能，您需要升级集群到最新的版本，升级过程有60s左右的连接闪断，请确保业务有重连机制。
 -   如果没有显示**升级到最新版本**按钮，代表您的集群已经是最新版本。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/961111/156350170751543_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/961111/156350223051543_zh-CN.png)
 
 ## 2019年7月 {#section_c16_qv8_0zx .section}
 
@@ -19,5 +19,21 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|----|----|----|----|
-|跨数据库查询|支持POLARDB for MySQL与其他数据库之间进行跨数据库查询。|2019-05-30|华北1（青岛），华北2（北京），华北3（张家口），华北5（呼和浩特），华东1（杭州），华东2（上海），华南1（深圳），香港|[跨数据库查询](https://help.aliyun.com/document_detail/99896.html)|
+|跨数据库查询|支持POLARDB for MySQL与其他数据库之间进行跨数据库查询。|2019-05-30| 华北1（青岛）
+
+ 华北2（北京）
+
+ 华北3（张家口）
+
+ 华北5（呼和浩特）
+
+ 华东1（杭州）
+
+ 华东2（上海）
+
+ 华南1（深圳）
+
+ 香港
+
+ |[跨数据库查询](https://help.aliyun.com/document_detail/99896.html)|
 
